--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -21,7 +21,16 @@
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
-  -->
+    -->
+  <style>
+body {
+	background: url(http://www.burntfen.net/pictures/forest.png) no-repeat fixed center;
+	background-color: black;
+} 
+
+container {opacity:0.9;}
+</style>    
+
   </head>
 
   <body>
