--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -25,6 +25,7 @@
   </head>
 
   <body>
+    <div class="wrapper">
 
     <div class="navbar">
       <div class="navbar-inner">
@@ -54,6 +55,8 @@
 
     </div> <!-- /container -->
 
+  </div> <!-- /wrapper -->
     {% include JB/analytics %}
+    
   </body>
 </html>
