--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -40,6 +40,9 @@
       </div>
     </div>
 
+			<div class="push"></div>
+  </div> <!-- /wrapper -->
+
     <div class="container">
 
       <div class="content">
@@ -55,8 +58,8 @@
 
     </div> <!-- /container -->
 
-  </div> <!-- /wrapper -->
+
     {% include JB/analytics %}
-    
+
   </body>
 </html>
