Changed header to brown!

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -27,7 +27,7 @@ html, body {
 
 /* Page header tweaks */
 .page-header {
-  background-color: #f5f5f5;
+  background-color: #3d0f0f;
   padding: 20px 20px 10px;
   margin: -20px -20px 20px;
 }
