--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -14,7 +14,10 @@
     <!-- Le styles -->
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
-    <link href="{{ HOME_PATH }}/assets/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <!--
+    This isn't really a possibility until i figure out how the posts are made. They've an element stlye of 800px, blast them.
+    <link href="{{ HOME_PATH }}assets/css/bootstrap-responsive.css" rel="stylesheet" type="text/css" media="all">
+    -->
 
     <link rel="shortcut icon" href="favicon.ico">
 
@@ -129,23 +132,7 @@
        </div> <!-- /navbar-inner -->
      </div> <!-- /navbar -->
 
-
-<!-- Old Navbar
-    <div class="navbar">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
-          <ul class="nav">
-            {% assign pages_list = site.pages %}
-            {% assign group = 'navigation' %}
-            {% include JB/pages_list %}
-          </ul>
-        </div>
-      </div>
-    </div> -->
-
-
-    <div class="wrapper" style="margin-top:40px;">
+    <div class="wrapper">
 
     <div class="container">
 
