--- a/assets/css/bootstrap-responsive.css
+++ b/assets/css/bootstrap-responsive.css
@@ -114,15 +114,15 @@
     min-height: 1px;
     margin-left: 30px;
   }
-  .container,
+  /* .container,
   .navbar-static-top .container,
   .navbar-fixed-top .container,
   .navbar-fixed-bottom .container {
     width: 1170px;
-  }
+  } */
   .span12 {
     width: 1170px;
-  }
+  } 
   .span11 {
     width: 1070px;
   }
