--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -90,6 +90,9 @@
 
                   {% if page.url == "/other.html" %}<li class="active">{% else %}<li>{% endif %}
                   <a href="{{ site.url }}/other.html">Other</a></li>
+                  
+                  {% if page.url == "/plans.html" %}<li class="active">{% else %}<li>{% endif %}
+                  <a href="{{ site.url }}/plans.html">Plans</a></li>
                 </ul>
               </li>
 
