Typos on about, padding for titles, typo on networks, font icons before titles using css, padding fix for meta tags.

--- a/_includes/themes/twitter/index.html
+++ b/_includes/themes/twitter/index.html
@@ -143,14 +143,14 @@
         </div>
 
         <div id="title"> 
-            <p>Front-end Developer // Computational linguist // just this guy <span id="egg"></span></p>
+            <p>Front-end developer // Computational linguist // Just this guy <span id="egg"></span></p>
         </div>
 
-        <div class="random menu" style="width:80px;"><a href="about.html/#networks">networks</a></div>
-        <div class="random menu" style="width:68px;"><a href="#blog-posts">posts</a></div>
+        <div class="random menu" style="width:80px;"><a href="about.html#networks">networks</a></div>
+        <div class="random menu" style="width:60px;"><a href="#blog-posts">posts</a></div>
         <div class="random menu" style="width:75px;"><a href="#projects">projects</a></div>
         <div class="random menu" style="width:85px;"><a href="#linguistics">linguistics</a></div>
-        <div class="random menu" style="width:120px;"><a href="#art">poetry and art</a></div>
+        <div class="random menu" style="width:115px;"><a href="#art">poetry and art</a></div>
         <div class="random menu" style="width:98px;"><a href="#fossils">old projects</a></div>
 
      </div>
