--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -139,7 +139,7 @@ h1 {
 	float:left;
 }
 .tag_box a {
-	padding: 3px 6px;
+	padding: 3px auto;
 	margin: 2px;
 	background: #eee;
 	color:#005F6B;
@@ -251,7 +251,7 @@ h1 {
 }
 
 .title {
-  margin: 50px auto 25px;
+  margin: 80px auto 25px;
   font-size: 30px;
   font-family: Helvetica;
   font-weight: 200;
@@ -277,6 +277,7 @@ h1 {
 
 .posts {
   list-style: none;
+  color: #888;
 }
 
 .posts-title a {
@@ -297,8 +298,100 @@ h1 {
   float: right;
 }
 
+#projects {
+    position: relative;
+}
+ 
+/*replace the content value with the 
+corresponding value from the list below*/
+ 
+#projects:before {
+    content: "\f0ad"; 
+    text-align: center;
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+/*--adjust as necessary--*/
+    color: #000;
+    font-size: 28px;
+}
 
+#linguistics {
+    position: relative;
+}
+ 
+/*replace the content value with the 
+corresponding value from the list below*/
+ 
+#linguistics:before {
+    content: "\f02d"; 
+    text-align: center;
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+/*--adjust as necessary--*/
+    color: #000;
+    font-size: 28px;
+}
 
+#art {
+    position: relative;
+}
+ 
+/*replace the content value with the 
+corresponding value from the list below*/
+ 
+#art:before {
+    content: "\f03e"; 
+    text-align: center;
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+/*--adjust as necessary--*/
+    color: #000;
+    font-size: 28px;
+}
+
+#fossils {
+    position: relative;
+}
+ 
+/*replace the content value with the 
+corresponding value from the list below*/
+ 
+#fossils:before {
+    content: "\f00c"; 
+    text-align: center;
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+/*--adjust as necessary--*/
+    color: #000;
+    font-size: 28px;
+}
+
+#blog-posts {
+    position: relative;
+}
+ 
+/*replace the content value with the 
+corresponding value from the list below*/
+ 
+#blog-posts:before {
+    content: "\f040"; 
+    text-align: center;
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+/*--adjust as necessary--*/
+    color: #000;
+    font-size: 28px;
+}
 
 
 
