--- a/_includes/themes/twitter/index.html
+++ b/_includes/themes/twitter/index.html
@@ -16,23 +16,17 @@
     <link href="{{ ASSET_PATH }}/bootstrap/css/responsive.css" rel="stylesheet">
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
     <link rel="stylesheet" href="{{ ASSET_PATH }}/bootstrap/css/font-awesome.min.css">
-    <!--
-    This isn't really a possibility until i figure out how the posts are made. They've an element stlye of 800px, blast them.
-    <link href="{{ HOME_PATH }}assets/css/bootstrap-responsive.css" rel="stylesheet" type="text/css" media="all">
-    -->
+
 
     <link rel="shortcut icon" href="favicon.ico">
 
     <!-- Le fav and touch icons -->
-  <!-- Update these with your own images
+    <!-- Update these with your own images
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
     -->
 
-    <!--[if lt IE 8]>
-    <script src="lte-ie7.js"></script>
-    <![endif]-->
   </head>
   <script src="assets/js/random.js"></script>
 
@@ -125,6 +119,8 @@
             </ul>
           
           </div><!--/.nav-collapse -->
+
+          <!-- Search Bar currently disabled for being useless. --> 
           <!-- form class="navbar-search pull-right" method="get" action="http://google.com/search">
              <p>
              <input type="hidden" name="q" value="site:richardlitt.github.com" />
@@ -132,6 +128,7 @@
              <button class="btn btn-mini" type="submit"><i class="icon-search"></i></button> 
              </p>
            </form> -->
+          
          </div> <!-- /container -->
        </div> <!-- /navbar-inner -->
      </div> <!-- /navbar -->
@@ -139,11 +136,11 @@
      <div class="container-fluid row-fluid span12 hero-index">
 
         <div id="avatar">
-          <img src="images/avatar.png" name="photo" onclick="do_switch()"/> 
+          <img src="images/avatar.png" name="photo" /> <!-- onclick="do_switch()"/--> 
         </div>
 
         <div id="title"> 
-            <p>Front-end developer // Computational linguist // Just this guy <span id="egg"></span></p>
+            <p>Front-end developer // Computational linguist // Just this guy <!-- span id="egg"></span --></p>
         </div>
 
         <div class="random menu" style="width:80px;"><a href="about.html#networks">networks</a></div>
@@ -157,20 +154,20 @@
 
     <div class="wrapper">
 
-    <div class="container">
+      <div class="container">
 
-      <div class="content">
-        {{ content }}
-      </div>
+        <div class="content">
+          {{ content }}
+        </div>
 
-      
-      <footer>
-        <p>&copy; {{ site.author.name }} 2012 
-          with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-          and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
-        </p>
+        
+        <footer>
+          <p>&copy; {{ site.author.name }} 2012 
+            with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
+            and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
+          </p>
         </footer>
-    <div class="push"></div>    
+      <div class="push"></div>    
         
     </div> <!-- /container -->
 
@@ -194,7 +191,7 @@
     <script src="assets/js/bootstrap-carousel.js"></script>
     <script src="assets/js/bootstrap-typeahead.js"></script>
     <script src="assets/js/bootstrap-affix.js"></script>
-    <script src="assets/js/switch.js"></script>
+    <!-- script src="assets/js/switch.js"></script -->
 
     {% include JB/analytics %}
 
