--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -164,6 +164,7 @@ h1 {
   background: #000 url('../bootstrap/img/wood-walkway-full.jpg') center bottom no-repeat;
   width: 100%;
   height: 150px;
+  float: none;
   box-shadow: inset 0 0 30px rgba(0,0,0, .75);
 }
 
@@ -173,6 +174,7 @@ h1 {
   background: #000 url('../bootstrap/img/wood-walkway-full.jpg') center bottom no-repeat;
   width: 100%;
   height: 600px;
+  float: none;
   box-shadow: inset 0 0 30px rgba(0,0,0, .75);
 }
 
@@ -251,7 +253,7 @@ h1 {
 }
 
 .title {
-  margin: 80px auto 25px;
+  margin: 80px auto 25px auto;
   font-size: 30px;
   font-family: Helvetica;
   font-weight: 200;
@@ -259,6 +261,7 @@ h1 {
   text-align: center;
   border-bottom: 1px thick #33666;
 }
+
 
 .text-box h4 {
   border-bottom:1px solid #999;
@@ -392,10 +395,6 @@ corresponding value from the list below*/
     color: #000;
     font-size: 28px;
 }
-
-
-
-
 
 
 
