More social networks, pushed the footer down, added source to footer, mild edits in about, changed .com to .net for wf hosted bf sites.

--- a/_includes/themes/twitter/index.html
+++ b/_includes/themes/twitter/index.html
@@ -164,7 +164,7 @@
         <footer>
           <p>&copy; {{ site.author.name }} 2012 
             with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-            and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
+            and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>. <a href="https://github.com/RichardLitt/richardlitt.github.com">Source</a>. 
           </p>
         </footer>
       <div class="push"></div>    
