--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
     {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="{{ site.author.name }}">
+    <meta name="copyright" content="&copy; {{ site.author.name }} 2013">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
@@ -16,19 +18,15 @@
     <link href="{{ ASSET_PATH }}/bootstrap/css/responsive.css" rel="stylesheet">
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
     <link rel="stylesheet" href="{{ ASSET_PATH }}/bootstrap/css/font-awesome.min.css">
-    <!--
-    This isn't really a possibility until i figure out how the posts are made. They've an element stlye of 800px, blast them.
-    <link href="{{ HOME_PATH }}assets/css/bootstrap-responsive.css" rel="stylesheet" type="text/css" media="all">
-    -->
 
     <link rel="shortcut icon" href="favicon.ico">
 
     <!-- Le fav and touch icons -->
-  <!-- Update these with your own images
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
-    -->
+    <link rel="apple-touch-icon" href="{{ ASSET_PATH}/images/touch-icon-iphone.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="{{ ASSET_PATH}/images/touch-icon-ipad.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="{{ ASSET_PATH}/images/touch-icon-iphone-retina.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="{{ ASSET_PATH}/images/touch-icon-ipad-retina.png" />
+
   </head>
 
   <body>
