--- a/_includes/themes/twitter/index.html
+++ b/_includes/themes/twitter/index.html
@@ -22,10 +22,10 @@
     <link rel="shortcut icon" href="favicon.ico">
 
     <!-- Le fav and touch icons -->
-    <link rel="apple-touch-icon" href="{{ ASSET_PATH}/images/touch-icon-iphone.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="{{ ASSET_PATH}/images/touch-icon-ipad.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="{{ ASSET_PATH}/images/touch-icon-iphone-retina.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="{{ ASSET_PATH}/images/touch-icon-ipad-retina.png" />
+    <link rel="apple-touch-icon" href="{{ ASSET_PATH }}/images/touch-icon-iphone.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="{{ ASSET_PATH }}/images/touch-icon-ipad.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="{{ ASSET_PATH }}/images/touch-icon-iphone-retina.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="{{ ASSET_PATH }}/images/touch-icon-ipad-retina.png" />
 
   </head>
   <script src="assets/js/random.js"></script>
