And making the drop down easier.

--- a/assets/less/style-responsive.less
+++ b/assets/less/style-responsive.less
@@ -49,7 +49,7 @@
 	.nav-collapse {
 		text-align: center;
 		z-index: 1;
-		width: 400px;
+		width: inherit;
 		background: #000;
 		filter:alpha(opacity=8);
 		-moz-opacity:0.8;
