--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1138,7 +1138,7 @@
   .nav-collapse {
     text-align: center;
     z-index: 1;
-    width: 400px;
+    width: inherit;
     background: #000;
     filter: alpha(opacity=8);
     -moz-opacity: 0.8;
