Added in a font-awesome social network links bar, fixed responsive issues for 1200+, removed sass files as offenders.

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -306,97 +306,19 @@ h1 {
   float: right;
 }
 
-#projects {
-    position: relative;
-}
- 
-/*replace the content value with the 
-corresponding value from the list below*/
- 
-#projects:before {
-    content: "\f0ad"; 
-    text-align: center;
-    font-family: FontAwesome;
-    font-style: normal;
-    font-weight: normal;
-    text-decoration: inherit;
-/*--adjust as necessary--*/
+.icons-bar {
+  text-align: center;
+  margin-top: 60px;
+  a { 
+    text-decoration: none;
     color: #000;
-    font-size: 28px;
-}
-
-#linguistics {
-    position: relative;
-}
- 
-/*replace the content value with the 
-corresponding value from the list below*/
- 
-#linguistics:before {
-    content: "\f02d"; 
-    text-align: center;
-    font-family: FontAwesome;
-    font-style: normal;
-    font-weight: normal;
-    text-decoration: inherit;
-/*--adjust as necessary--*/
-    color: #000;
-    font-size: 28px;
-}
-
-#art {
-    position: relative;
-}
- 
-/*replace the content value with the 
-corresponding value from the list below*/
- 
-#art:before {
-    content: "\f03e"; 
-    text-align: center;
-    font-family: FontAwesome;
-    font-style: normal;
-    font-weight: normal;
-    text-decoration: inherit;
-/*--adjust as necessary--*/
-    color: #000;
-    font-size: 28px;
-}
-
-#fossils {
-    position: relative;
-}
- 
-/*replace the content value with the 
-corresponding value from the list below*/
- 
-#fossils:before {
-    content: "\f00c"; 
-    text-align: center;
-    font-family: FontAwesome;
-    font-style: normal;
-    font-weight: normal;
-    text-decoration: inherit;
-/*--adjust as necessary--*/
-    color: #000;
-    font-size: 28px;
-}
-
-#blog-posts {
-    position: relative;
-}
- 
-/*replace the content value with the 
-corresponding value from the list below*/
- 
-#blog-posts:before {
-    content: "\f040"; 
-    text-align: center;
-    font-family: FontAwesome;
-    font-style: normal;
-    font-weight: normal;
-    text-decoration: inherit;
-/*--adjust as necessary--*/
-    color: #000;
-    font-size: 28px;
+    font-size: 28px; 
+    &:hover {
+      text-decoration: none;
+      color: red;
+    }
+  }
+  i {
+    margin: auto 20px;
+  }
 }
