--- a/_includes/themes/twitter/index.html
+++ b/_includes/themes/twitter/index.html
@@ -16,7 +16,7 @@
     <!-- Le styles -->
     <link href="{{ HOME_PATH }}assets/css/bootstrap.css" rel="stylesheet">
     <link href="{{ HOME_PATH }}assets/css/responsive.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{ HOME_PATH }}assets/css/font-awesome.min.css">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
     <link rel="shortcut icon" href="favicon.ico">
 
