--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -5502,90 +5502,21 @@ h1 {
 .alignright {
   float: right;
 }
-#projects {
-  position: relative;
-}
-/*replace the content value with the 
-corresponding value from the list below*/
-#projects:before {
-  content: "\f0ad";
+.icons-bar {
   text-align: center;
-  font-family: FontAwesome;
-  font-style: normal;
-  font-weight: normal;
-  text-decoration: inherit;
-  /*--adjust as necessary--*/
-
+  margin-top: 60px;
+}
+.icons-bar a {
+  text-decoration: none;
   color: #000;
   font-size: 28px;
 }
-#linguistics {
-  position: relative;
+.icons-bar a:hover {
+  text-decoration: none;
+  color: red;
 }
-/*replace the content value with the 
-corresponding value from the list below*/
-#linguistics:before {
-  content: "\f02d";
-  text-align: center;
-  font-family: FontAwesome;
-  font-style: normal;
-  font-weight: normal;
-  text-decoration: inherit;
-  /*--adjust as necessary--*/
-
-  color: #000;
-  font-size: 28px;
-}
-#art {
-  position: relative;
-}
-/*replace the content value with the 
-corresponding value from the list below*/
-#art:before {
-  content: "\f03e";
-  text-align: center;
-  font-family: FontAwesome;
-  font-style: normal;
-  font-weight: normal;
-  text-decoration: inherit;
-  /*--adjust as necessary--*/
-
-  color: #000;
-  font-size: 28px;
-}
-#fossils {
-  position: relative;
-}
-/*replace the content value with the 
-corresponding value from the list below*/
-#fossils:before {
-  content: "\f00c";
-  text-align: center;
-  font-family: FontAwesome;
-  font-style: normal;
-  font-weight: normal;
-  text-decoration: inherit;
-  /*--adjust as necessary--*/
-
-  color: #000;
-  font-size: 28px;
-}
-#blog-posts {
-  position: relative;
-}
-/*replace the content value with the 
-corresponding value from the list below*/
-#blog-posts:before {
-  content: "\f040";
-  text-align: center;
-  font-family: FontAwesome;
-  font-style: normal;
-  font-weight: normal;
-  text-decoration: inherit;
-  /*--adjust as necessary--*/
-
-  color: #000;
-  font-size: 28px;
+.icons-bar i {
+  margin: auto 20px;
 }
 .pull-right {
   float: right;
