--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1137,7 +1137,7 @@
   }
   .nav-collapse {
     text-align: center;
-    z-index: 1;
+    z-index: 2;
     width: inherit;
     background: #000;
     filter: alpha(opacity=8);
@@ -1148,12 +1148,21 @@
     -webkit-border-radius: 15px;
     border-radius: 15px;
   }
+  .nav-collapse .dropdown-menu {
+    z-index: 1;
+  }
   .navbar .btn-navbar {
     margin-top: 0px;
     padding-top: 3px;
   }
   .navbar .btn-navbar .icon-bar {
     background-color: red;
+  }
+  .icons-bar {
+    margin: 10px auto;
+  }
+  .icons-bar i {
+    line-height: 50px;
   }
 }
 @media (max-width: 979px) {
@@ -1172,6 +1181,9 @@
   }
 }
 @media (min-width: 1200px) {
+  .hero {
+    margin: 0px auto auto 0px;
+  }
   .hero-index {
     padding: 20px 0 0 0;
     margin: 0 0 0 0;
