--- a/assets/less/style-responsive.less
+++ b/assets/less/style-responsive.less
@@ -48,7 +48,7 @@
 	}
 	.nav-collapse {
 		text-align: center;
-		z-index: 1;
+		z-index: 2;
 		width: inherit;
 		background: #000;
 		filter:alpha(opacity=8);
@@ -58,12 +58,21 @@
 		-moz-border-radius: 15px;
 		-webkit-border-radius: 15px;
 		border-radius: 15px;
+		.dropdown-menu {
+			z-index: 1;
+		}
 	}
 	.navbar .btn-navbar {
 		margin-top: 0px;
 		padding-top: 3px;
 		.icon-bar {
 			background-color: red;
+		}
+	}
+	.icons-bar {
+		margin: 10px auto;
+		i {
+			line-height: 50px;
 		}
 	}
 }
@@ -86,6 +95,9 @@
 }
 
 @media (min-width: 1200px) {
+	.hero {
+		margin: 0px auto auto 0px;
+	}
 
 	.hero-index {
 	  padding: 20px 0 0 0;
