Two new posts and some splash page changes!

--- a/_includes/themes/twitter/index.html
+++ b/_includes/themes/twitter/index.html
@@ -144,8 +144,8 @@
         <div class="random menu" style="width:80px;"><a href="about.html#networks">networks</a></div>
         <div class="random menu" style="width:60px;"><a href="#blog-posts">posts</a></div>
         <div class="random menu" style="width:75px;"><a href="#projects">projects</a></div>
-        <div class="random menu" style="width:85px;"><a href="#linguistics">linguistics</a></div>
         <div class="random menu" style="width:115px;"><a href="#art">poetry and art</a></div>
+        <div class="random menu" style="width:85px;"><a href="#linguistics">academia</a></div>
         <div class="random menu" style="width:98px;"><a href="#fossils">old projects</a></div>
 
      </div>     
