--- a/_includes/themes/twitter/index.html
+++ b/_includes/themes/twitter/index.html
@@ -134,7 +134,7 @@
      <div class="container-fluid row-fluid span12 hero-index hidden-phone">
 
         <div id="avatar">
-          <img src="images/avatar.png" name="photo" /> <!-- onclick="do_switch()"/--> 
+          <img src="images/avatar_new.png" name="photo" /> <!-- onclick="do_switch()"/--> 
         </div>
 
         <div id="title"> 
