Added in ocean styling, redid front page. Looks badass.

--- a/_includes/themes/twitter/index.html
+++ b/_includes/themes/twitter/index.html
@@ -29,7 +29,7 @@
     <script src="assets/js/random.js"></script>
 
   </head>
-  <body>
+  <body id="index">
 
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
@@ -134,7 +134,7 @@
      <div class="container-fluid row-fluid span12 hero-index hidden-phone">
 
         <div id="avatar">
-          <img src="images/avatar_new.png" name="photo" /> <!-- onclick="do_switch()"/--> 
+          <img src="assets/img/avatar.png" name="photo" /> <!-- onclick="do_switch()"/--> 
         </div>
 
         <div id="title"> 
@@ -152,7 +152,7 @@
      <div class="container-fluid row-fluid span12 hero-index visible-phone">
 
         <div id="avatar">
-          <img src="images/avatar.png" name="photo" /> 
+          <img src="assets/img/avatar.png" name="photo" /> 
         </div>
 
         <div id="title"> 
