--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -2,6 +2,21 @@
 html, body {
   background-color: #eee;
 }
+
+body#index {
+  color: #999;
+  .hero-index {
+      box-shadow: none !important;
+      //border-bottom: 20px solid #000;
+  }
+  .wrapper {
+      background: #888 url('../img/ocean.jpg') repeat top;
+  }
+  a:hover {
+      text-decoration: none;
+      color: red;
+  }
+}
 .navbar {
   margin-bottom: 0;
 }
@@ -161,7 +176,7 @@ h1 {
 .hero {
   padding: 40px 0 0 0;
   margin: 20px 0 0 0;
-  background: #000 url('../../images/wood-walkway-full.jpg') center bottom no-repeat;
+  background: #000 url('../img/ocean.jpg') center repeat;
   width: 100% + 20px;
   height: 150px;
   float: none;
@@ -171,7 +186,7 @@ h1 {
 .hero-index {
   padding: 40px 0px 0px 0px;
   margin: 20px 0px 0px 0px;
-  background: #000 url('../../images/wood-walkway-full.jpg') center bottom no-repeat;
+  // background: #000 url('../../images/wood-walkway-full.jpg') center bottom no-repeat;
   width: 100%;
   height: 600px;
   float: none;
@@ -179,7 +194,7 @@ h1 {
 }
 
 #avatar {
-  width: 150px;
+  width: 200px;
   margin: 0 auto;
 }
 
@@ -191,13 +206,13 @@ h1 {
   line-height: 20px;
   letter-spacing: -1px;
   margin: 20px auto;
-  color: white;
-  background-color: black;
+  color: #999;
+  // background-color: black;
   -moz-border-radius: 15px;
   -webkit-border-radius: 15px;
   border-radius: 15px;
   padding: 10px 10px 1px 10px;
-  box-shadow: inset 0 0 10px rgba(0,0,0, 1);
+  box-shadow: inset 0 0 20px rgba(0,0,0, 1);
   filter:alpha(opacity=8);
   -moz-opacity:0.8;
   -khtml-opacity: 0.8;
@@ -221,25 +236,25 @@ h1 {
 
 .menu {
   margin: 10px 0 10px 0;
-  color: white;
-  background-color: black;
+  a { color: #999; }
   -moz-border-radius: 20px;
   -webkit-border-radius: 20px;
   border-radius: 20px;
   padding: 10 20 10 20;
+  box-shadow: inset 0 0 20px rgba(0,0,0, 1);
   filter:alpha(opacity=8);
   -moz-opacity:0.8;
   -khtml-opacity: 0.8;
   opacity: 0.8;
 }
 
+
 .menu a {
-  color:white;
   text-decoration: none;
-  font-family: Helvetica;
-  font-weight: 300;
-  letter-spacing: -1px;
-  font-size: 17px;
+  //font-family: Helvetica;
+  //font-weight: 300;
+  letter-spacing: 0px;
+  //font-size: 17px;
   padding: 10px;
   width: inherit;
 }
@@ -311,7 +326,7 @@ h1 {
   margin-top: 60px;
   a { 
     text-decoration: none;
-    color: #000;
+    color: #999;
     font-size: 28px; 
     &:hover {
       text-decoration: none;
@@ -322,3 +337,4 @@ h1 {
     margin: auto 20px;
   }
 }
+
