--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -5219,7 +5219,9 @@ body#index .hero-index {
   box-shadow: none !important;
 }
 body#index .wrapper {
-  background: #888888 url('../img/ocean.jpg') repeat top;
+  background: #888888 url('../img/licata.jpg') no-repeat top;
+  background-attachment: fixed;
+  background-size: cover;
 }
 body#index a:hover {
   text-decoration: none;
