--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -10,7 +10,9 @@ body#index {
       //border-bottom: 20px solid #000;
   }
   .wrapper {
-      background: #888 url('../img/ocean.jpg') repeat top;
+      background: #888 url('../img/licata.jpg') no-repeat top;
+      background-attachment: fixed;
+      background-size: cover;
   }
   a:hover {
       text-decoration: none;
