--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -3,6 +3,10 @@ html, body {
   background-color: #eee;
 }
 
+.content { 
+  padding-bottom: 800px;
+}
+
 body#index {
   color: #999;
   .hero-index {
@@ -10,7 +14,7 @@ body#index {
       //border-bottom: 20px solid #000;
   }
   .wrapper {
-      background: #888 url('../img/licata.jpg') no-repeat top;
+      background: #888 url('../../images/wood-walkway-full.jpg') no-repeat top;
       background-attachment: fixed;
       background-size: cover;
   }
@@ -178,7 +182,7 @@ h1 {
 .hero {
   padding: 40px 0 0 0;
   margin: 20px 0 0 0;
-  background: #000 url('../img/ocean.jpg') center repeat;
+  background: #000 url('../img/board-walk.png') center repeat;
   width: 100% + 20px;
   height: 150px;
   float: none;
@@ -191,7 +195,7 @@ h1 {
   // background: #000 url('../../images/wood-walkway-full.jpg') center bottom no-repeat;
   width: 100%;
   height: 600px;
-  float: none;
+  /*float: none; */
   box-shadow: inset 0 0 30px rgba(0,0,0, .75);
 }
 
@@ -243,7 +247,7 @@ h1 {
   -webkit-border-radius: 20px;
   border-radius: 20px;
   padding: 10 20 10 20;
-  box-shadow: inset 0 0 20px rgba(0,0,0, 1);
+  /* box-shadow: inset 0 0 20px rgba(0,0,0, 1); */
   filter:alpha(opacity=8);
   -moz-opacity:0.8;
   -khtml-opacity: 0.8;
