Completely changed home page.

--- a/_includes/themes/twitter/index.html
+++ b/_includes/themes/twitter/index.html
@@ -137,13 +137,11 @@
         <div id="title"> 
             <p>Front-end developer // Computational linguist // Just this guy <!-- span id="egg"></span --></p>
         </div>        
-
-        <div class="random menu" style="width:80px;"><a href="about.html#networks">networks</a></div>
-        <div class="random menu" style="width:60px;"><a href="#blog-posts">posts</a></div>
+<!-- 
         <div class="random menu" style="width:75px;"><a href="#projects">projects</a></div>
-        <div class="random menu" style="width:115px;"><a href="#art">poetry and art</a></div>
+        <div class="random menu" style="width:140px;"><a href="#art">poetry and art</a></div>
         <div class="random menu" style="width:85px;"><a href="#linguistics">academia</a></div>
-        <div class="random menu" style="width:98px;"><a href="#fossils">old projects</a></div>
+        <div class="random menu" style="width:115px;"><a href="#fossils">old projects</a></div> -->
 
      </div>     
      <div class="container-fluid row-fluid span12 hero-index visible-phone">
@@ -167,8 +165,8 @@
           {{ content }}
         </div>
 
-        
         <footer>
+          <a href="mailto:richard.littauer@gmail.com"><img src="comic/unloaded/random/dragons.png"></a>
           <p>&copy; {{ site.author.name }} 2012 
             with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
             and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>. <a href="https://github.com/RichardLitt/richardlitt.github.com">Source</a>. 
