--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -205,7 +205,7 @@ body {
   font-size: 14px;
   line-height: 20px;
   color: #333333;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
 }
 a {
   color: #0088cc;
@@ -5210,21 +5210,22 @@ a.badge:focus {
 /* Override some defaults */
 html,
 body {
-  background-color: #eee;
+  background-color: #FFF;
 }
 .content { 
-  padding-bottom: 800px;
+  padding-bottom: 200px;
 }
 body#index {
-  color: #999;
+  color: #909;
 }
 body#index .hero-index {
   box-shadow: none !important;
 }
 body#index .wrapper {
-  background: #888888 url('../../images/wood-walkway-full.jpg') no-repeat top;
+  background-color: #FFFFFF;
+/*  background: #888888 url('../../images/wood-walkway-full.jpg') no-repeat top;
   background-attachment: fixed;
-  background-size: cover;
+  background-size: cover;*/
 }
 body#index a:hover {
   text-decoration: none;
@@ -5295,7 +5296,11 @@ li {
   /* center align it with the container */
 }
 footer {
-  margin: 150px auto 10px auto;
+  margin: 0px auto 20px auto;
+  text-align: center;
+}
+footer img {
+  margin-bottom: 20px;
 }
 .container {
   -webkit-border-radius: 6px 6px 6px 6px;
@@ -5312,7 +5317,7 @@ footer {
   line-height: 100%;
   letter-spacing: -1px;
   padding: 0;
-  margin: 20px 0 5px 20px;
+  margin: 50px 0 5px 20px;
 }
 .topbar .btn {
   border: 0;
@@ -5363,6 +5368,10 @@ h1 {
   color: #FFF;
 }
 /* ===================== Manual resets ========================== */
+
+.navbar-inner {
+  background-color: #099;
+}
 .hero {
   padding: 40px 0 0 0;
   margin: 20px 0 0 0;
@@ -5376,7 +5385,7 @@ h1 {
   padding: 40px 0px 0px 0px;
   margin: 20px 0px 0px 0px;
   width: 100%;
-  height: 600px;
+  height: 80%;
   /*float: none; */
   box-shadow: inset 0 0 30px rgba(0, 0, 0, 0.75);
 }
@@ -5385,23 +5394,24 @@ h1 {
   margin: 0 auto;
 }
 #title {
-  width: 425px;
-  font-size: 18px;
+  width: 530px;
+  font-size: 21px;
   font-family: Helvetica;
   font-weight: 300;
   line-height: 20px;
   letter-spacing: -1px;
-  margin: 20px auto;
-  color: #999;
-  -moz-border-radius: 15px;
+  margin: 20px auto 25%;
+  color: #099;
+  padding: 10px 100px 3px 100px;
+  border-bottom: 3px double #099;
+/*  -moz-border-radius: 15px;
   -webkit-border-radius: 15px;
   border-radius: 15px;
-  padding: 10px 10px 1px 10px;
   box-shadow: inset 0 0 20px #000000;
   filter: alpha(opacity=8);
   -moz-opacity: 0.8;
   -khtml-opacity: 0.8;
-  opacity: 0.8;
+  opacity: 0.8;*/
 }
 .callout {
   margin: 30px 0 30px 0;
@@ -5418,11 +5428,11 @@ h1 {
   opacity: 0.8;
 }
 .menu {
-  margin: 10px 0 10px 0;
+  margin: 5px 0px;
   -moz-border-radius: 20px;
   -webkit-border-radius: 20px;
   border-radius: 20px;
-  padding: 10 20 10 20;
+  padding: 0px;
   /* box-shadow: inset 0 0 20px #000000; */
   filter: alpha(opacity=8);
   -moz-opacity: 0.8;
@@ -5430,7 +5440,7 @@ h1 {
   opacity: 0.8;
 }
 .menu a {
-  color: #999;
+  color: #990;
 }
 .menu a {
   text-decoration: none;
@@ -5447,39 +5457,52 @@ h1 {
 .random {
   position: relative;
   margin-top: 30px;
+  font-family: Helvetica;
+  font-weight: 200;
+  font-size: 17px;
 }
 .title {
-  margin: 80px auto 25px auto;
+  margin: 80px auto 25px 100px;
   font-size: 30px;
   font-family: Helvetica;
   font-weight: 200;
   letter-spacing: -1px;
-  text-align: center;
   border-bottom: 1px thick #33666;
 }
 .text-box h4 {
-  border-bottom: 1px solid #999;
+  border-bottom: 1px solid #099;
   font-family: Helvetica;
   font-weight: 200;
-  letter-spacing: -1px;
+  color: #099;
+  letter-spacing: 0px;
+  font-size: 20px;
 }
 .text-box a {
   text-align: center;
 }
+.text-box h5 {
+  line-height: 40px;
+  font-size: 22px;
+  font-family: Helvetica;
+  font-weight: 200;
+  margin-bottom: 0px;
+}
 .text-box p {
-  padding: 10px auto;
+  margin: 0px 20px 30px;
+  font-family: Georgia;
+  font-weight: 200;
 }
 .posts {
   list-style: none;
-  color: #888;
+  color: #0088cc;
 }
 .posts-title a {
-  color: #888;
+  color: #0088cc;
 }
 .posts-title {
   height: 20px;
-  border-bottom: 1px dotted #888;
-  margin: 5px auto;
+  border-bottom: 1px dotted #0088cc;
+  margin: 15px auto;
 }
 .alignleft {
   float: left;
@@ -5489,11 +5512,11 @@ h1 {
 }
 .icons-bar {
   text-align: center;
-  margin-top: 60px;
+  margin: 60px auto 80px;
 }
 .icons-bar a {
   text-decoration: none;
-  color: #999;
+  color: #909;
   font-size: 28px;
 }
 .icons-bar a:hover {
