--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -5375,11 +5375,11 @@ h1 {
 .hero {
   padding: 40px 0 0 0;
   margin: 20px 0 0 0;
-  background: #000000 url('../img/board-walk.png') center repeat;
+  background-color: #FFFFFF;
   width: 120%;
-  height: 150px;
+  height: 100px;
   float: none;
-  box-shadow: inset 0 0 30px rgba(0, 0, 0, 0.75);
+  /* box-shadow: inset 0 0 30px rgba(0, 0, 0, 0.75); */
 }
 .hero-index {
   padding: 40px 0px 0px 0px;
