Changed color of name

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -5262,7 +5262,7 @@ body#index a:hover {
 }
 .navbar a.brand {
   text-shadow: none;
-  color: #999;
+  color: #FFF;
   padding-top: 1px;
   padding-bottom: 1px;
 }
