--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -34,8 +34,7 @@
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+            <i class="fa fa-bars"></i>
           </a>
           <a class="brand" href="{{ HOME_PATH }}">RICHARD LITTAUER<!--{{ site.title }}--></a>
           <div class="nav-collapse">
@@ -102,22 +101,22 @@
 
               <li><a href="{{ site.url }}/art.html">Art</a></li>
 
-              <li><a href="{{ site.url }}/atom.xml"><i class="icon-rss"></i></a></li>
+              <li><a href="{{ site.url }}/atom.xml"><i class="fa fa-rss"></i></a></li>
 
-              <li><a href="http://www.twitter.com/richlitt"><i class="icon-twitter"></i></a></li>
+              <li><a href="http://www.twitter.com/richlitt"><i class="fa fa-twitter"></i></a></li>
 
-              <li><a href="https://github.com/RichardLitt"><i class="icon-github"></i></a></li>
+              <li><a href="https://github.com/RichardLitt"><i class="fa fa-github"></i></a></li>
 
-              <li><a href="mailto:richard.littauer@gmail.com"><i class="icon-envelope"></i></a></li>
+              <li><a href="mailto:richard.littauer@gmail.com"><i class="fa fa-envelope"></i></a></li>
 
             </ul>
-          
+
           </div><!--/.nav-collapse -->
           <!-- form class="navbar-search pull-right" method="get" action="http://google.com/search">
              <p>
              <input type="hidden" name="q" value="site:richardlitt.github.com" />
              <input type="text" class="search-query" name="q" />
-             <button class="btn btn-mini" type="submit"><i class="icon-search"></i></button> 
+             <button class="btn btn-mini" type="submit"><i class="fa fa-search"></i></button>
              </p>
            </form> -->
          </div> <!-- /container -->
@@ -135,15 +134,15 @@
         {{ content }}
       </div>
 
-      
+
       <footer>
-        <p>&copy; {{ site.author.name }} 2012 
+        <p>&copy; {{ site.author.name }} 2012
           with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>. <a href="https://github.com/RichardLitt/richardlitt.github.com">Source</a>.
         </p>
         </footer>
-    <div class="push"></div>    
-        
+    <div class="push"></div>
+
     </div> <!-- /container -->
 
   </div> <!-- /wrapper -->
