--- a/_includes/themes/twitter/index.html
+++ b/_includes/themes/twitter/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="{{ site.author.name }}">
     <meta name="copyright" content="&copy; {{ site.author.name }} 2013">
-    
+
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -16,7 +16,7 @@
     <!-- Le styles -->
     <link href="{{ HOME_PATH }}assets/css/bootstrap.css" rel="stylesheet">
     <link href="{{ HOME_PATH }}assets/css/responsive.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     <link rel="shortcut icon" href="favicon.ico">
 
@@ -35,8 +35,7 @@
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar hidden-tablet" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+            <i class="fa fa-bars"></i>
           </a>
           <a class="brand" href="{{ HOME_PATH }}">RICHARD LITTAUER<!--{{ site.title }}--></a>
           <div class="nav-collapse ">
@@ -103,27 +102,27 @@
 
               <li><a href="{{ site.url }}/art.html">Art</a></li>
 
-              <li><a href="{{ site.url }}/atom.xml"><i class="icon-rss"></i></a></li>
+              <li><a href="{{ site.url }}/atom.xml"><i class="fa fa-rss"></i></a></li>
 
-              <li><a href="http://www.twitter.com/richlitt"><i class="icon-twitter"></i></a></li>
+              <li><a href="http://www.twitter.com/richlitt"><i class="fa fa-twitter"></i></a></li>
 
-              <li><a href="https://github.com/RichardLitt"><i class="icon-github"></i></a></li>
+              <li><a href="https://github.com/RichardLitt"><i class="fa fa-github"></i></a></li>
 
-              <li><a href="mailto:richard.littauer@gmail.com"><i class="icon-envelope"></i></a></li>
+              <li><a href="mailto:richard.littauer@gmail.com"><i class="fa fa-envelope"></i></a></li>
 
             </ul>
-          
+
           </div><!--/.nav-collapse -->
 
-          <!-- Search Bar currently disabled for being useless. --> 
+          <!-- Search Bar currently disabled for being useless. -->
           <!-- form class="navbar-search pull-right" method="get" action="http://google.com/search">
              <p>
              <input type="hidden" name="q" value="site:richardlitt.github.com" />
              <input type="text" class="search-query" name="q" />
-             <button class="btn btn-mini" type="submit"><i class="icon-search"></i></button> 
+             <button class="btn btn-mini" type="submit"><i class="fa fa-search"></i></button>
              </p>
            </form> -->
-          
+
          </div> <!-- /container -->
        </div> <!-- /navbar-inner -->
      </div> <!-- /navbar -->
@@ -131,26 +130,26 @@
      <div class="container-fluid row-fluid span12 hero-index hidden-phone">
 
         <div id="avatar">
-          <img src="assets/img/avatar.png" name="photo" /> <!-- onclick="do_switch()"/--> 
+          <img src="assets/img/avatar.png" name="photo" /> <!-- onclick="do_switch()"/-->
         </div>
 
-        <div id="title"> 
+        <div id="title">
             <p>Front-end developer // Computational linguist // Just this guy <!-- span id="egg"></span --></p>
-        </div>        
-<!-- 
+        </div>
+<!--
         <div class="random menu" style="width:75px;"><a href="#projects">projects</a></div>
         <div class="random menu" style="width:140px;"><a href="#art">poetry and art</a></div>
         <div class="random menu" style="width:85px;"><a href="#linguistics">academia</a></div>
         <div class="random menu" style="width:115px;"><a href="#fossils">old projects</a></div> -->
 
-     </div>     
+     </div>
      <div class="container-fluid row-fluid span12 hero-index visible-phone">
 
         <div id="avatar">
-          <img src="assets/img/avatar.png" name="photo" /> 
+          <img src="assets/img/avatar.png" name="photo" />
         </div>
 
-        <div id="title"> 
+        <div id="title">
             <p>Front-end developer<br />
               Computational linguist </p>
         </div>
@@ -167,13 +166,13 @@
 
         <footer>
           <a href="mailto:richard.littauer@gmail.com"><img src="comic/unloaded/random/dragons.png"></a>
-          <p>&copy; {{ site.author.name }} 2012 
+          <p>&copy; {{ site.author.name }} 2012
             with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-            and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>. <a href="https://github.com/RichardLitt/richardlitt.github.com">Source</a>. 
+            and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>. <a href="https://github.com/RichardLitt/richardlitt.github.com">Source</a>.
           </p>
         </footer>
-      <div class="push"></div>    
-        
+      <div class="push"></div>
+
     </div> <!-- /container -->
 
   </div> <!-- /wrapper -->
