--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -6,7 +6,7 @@
     {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="{{ site.author.name }}">
-    <meta name="copyright" content="&copy; {{ site.author.name }} 2013">
+    <meta name="copyright" content="&copy; {{ site.author.name }} 2015">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
@@ -135,11 +135,12 @@
       </div>
 
 
-      <footer>
-        <p>&copy; {{ site.author.name }} 2012
-          with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-          and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>. <a href="https://github.com/RichardLitt/richardlitt.github.com">Source</a>.
-        </p>
+              <footer>
+          <p>{{ site.author.name }} &copy; <script type="text/javascript">
+            document.write(new Date().getFullYear());
+          </script>.
+            <a href="https://github.com/RichardLitt/richardlitt.github.com">Source</a>.
+          </p>
         </footer>
     <div class="push"></div>
 
