--- a/_includes/themes/twitter/index.html
+++ b/_includes/themes/twitter/index.html
@@ -134,7 +134,7 @@
         </div>
 
         <div id="title">
-            <p>Front-end developer // Computational linguist // Just this guy <!-- span id="egg"></span --></p>
+            <p>Full-stack developer // Computational linguist // Just this guy <!-- span id="egg"></span --></p>
         </div>
 <!--
         <div class="random menu" style="width:75px;"><a href="#projects">projects</a></div>
