--- a/_includes/themes/twitter/index.html
+++ b/_includes/themes/twitter/index.html
@@ -31,102 +31,6 @@
   </head>
   <body id="index">
 
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar hidden-tablet" data-toggle="collapse" data-target=".nav-collapse">
-            <i class="fa fa-bars"></i>
-          </a>
-          <a class="brand" href="{{ HOME_PATH }}">RICHARD LITTAUER<!--{{ site.title }}--></a>
-          <div class="nav-collapse ">
-            <ul class="nav">
-              {% if page.url == "/about.html" %}<li class="active">{% else %}<li>{% endif %}
-              <a href="{{ site.url }}/about.html">About</a></li>
-
-              {% if page.url == "/archive.html" %}<li class="dropdown active">{% else %}<li class="dropdown">{% endif %}
-                <a href="{{ site.url }}/archive.html" class="dropdown-toggle" data-toggle="dropdown">
-                  Archive
-                  <b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu">
-                  {% if page.url == "/archive.html" %}<li class="active">{% else %}<li>{% endif %}
-                  <a href="{{ site.url }}/archive.html">Posts</a></li>
-
-                  {% if page.url == "/categories.html" %}<li class="active">{% else %}<li>{% endif %}
-                  <a href="{{ site.url }}/categories.html">Categories</a></li>
-
-                  {% if page.url == "/tags.html" %}<li class="active">{% else %}<li>{% endif %}
-                  <a href="{{ site.url }}/tags.html">Tags</a></li>
-
-                  {% if page.url == "/pages.html" %}<li class="active">{% else %}<li>{% endif %}
-                  <a href="{{ site.url }}/pages.html">Pages</a></li>
-
-                </ul>
-              </li>
-
-              {% if page.url == "/projects.html" %}<li class="dropdown active">{% else %}<li class="dropdown">{% endif %}
-                <a href="{{ site.url }}/projects.html" class="dropdown-toggle" data-toggle="dropdown">
-                  Projects
-                  <b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu">
-
-                  {% if page.url == "/projects.html" %}<li class="active">{% else %}<li>{% endif %}
-                  <a href="{{ site.url }}/projects.html">Projects</a></li>
-
-                  {% if page.url == "/fun-stuff.html" %}<li class="active">{% else %}<li>{% endif %}
-                  <a href="{{ site.url }}/fun-stuff.html">Fun Stuff</a></li>
-
-                  {% if page.url == "/language-resource-dev.html" %}<li class="active">{% else %}<li>{% endif %}
-                  <a href="{{ site.url }}/language-resource-dev.html">Language Development</a></li>
-                </ul>
-              </li>
-
-              {% if page.url == "/research.html" %}<li class="dropdown active">{% else %}<li class="dropdown">{% endif %}
-                <a href="{{ site.url }}/research.html" class="dropdown-toggle" data-toggle="dropdown">
-                  Research
-                  <b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu">
-
-                  {% if page.url == "/publications.html" %}<li class="active">{% else %}<li>{% endif %}
-                  <a href="{{ site.url }}/publications.html">Publications</a></li>
-
-                  {% if page.url == "/researchresearch/language-policy.html" %}<li class="active">{% else %}<li>{% endif %}
-                  <a href="{{ site.url }}/language-policy.html">Language Policy</a></li>
-
-                  {% if page.url == "/other.html" %}<li class="active">{% else %}<li>{% endif %}
-                  <a href="{{ site.url }}/other.html">Other</a></li>
-                </ul>
-              </li>
-
-              <li><a href="{{ site.url }}/art.html">Art</a></li>
-
-              <li><a href="{{ site.url }}/atom.xml"><i class="fa fa-rss"></i></a></li>
-
-              <li><a href="http://www.twitter.com/richlitt"><i class="fa fa-twitter"></i></a></li>
-
-              <li><a href="https://github.com/RichardLitt"><i class="fa fa-github"></i></a></li>
-
-              <li><a href="mailto:richard.littauer@gmail.com"><i class="fa fa-envelope"></i></a></li>
-
-            </ul>
-
-          </div><!--/.nav-collapse -->
-
-          <!-- Search Bar currently disabled for being useless. -->
-          <!-- form class="navbar-search pull-right" method="get" action="http://google.com/search">
-             <p>
-             <input type="hidden" name="q" value="site:richardlitt.github.com" />
-             <input type="text" class="search-query" name="q" />
-             <button class="btn btn-mini" type="submit"><i class="fa fa-search"></i></button>
-             </p>
-           </form> -->
-
-         </div> <!-- /container -->
-       </div> <!-- /navbar-inner -->
-     </div> <!-- /navbar -->
-
      <div class="container-fluid row-fluid span12 hero-index hidden-phone">
 
         <div id="avatar">
@@ -134,7 +38,7 @@
         </div>
 
         <div id="title">
-            <p>Full-stack developer // Computational linguist // Just this guy <!-- span id="egg"></span --></p>
+            <p>Developer // Linguist // Artist <!-- span id="egg"></span --></p>
         </div>
 <!--
         <div class="random menu" style="width:75px;"><a href="#projects">projects</a></div>
@@ -150,8 +54,9 @@
         </div>
 
         <div id="title">
-            <p>Front-end developer<br />
-              Computational linguist </p>
+            <p>Developer<br />
+              Linguist <br />
+              Artist</p>
         </div>
 
      </div>
