Added in the navbar again

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -30,7 +30,16 @@
 
   <body>
 
-    <div class="container-fluid row-fluid span12 hero"></div>
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="brand" href="{{ HOME_PATH }}">RICHARD LITTAUER<!--{{ site.title }}--></a>
+         </div> <!-- /container -->
+       </div> <!-- /navbar-inner -->
+     </div> <!-- /navbar -->
+
+     <div class="container-fluid row-fluid span12 hero"></div>
+
 
     <div class="wrapper">
 
