--- a/_includes/themes/twitter/index.html
+++ b/_includes/themes/twitter/index.html
@@ -38,7 +38,7 @@
         </div>
 
         <div id="title">
-            <p>Developer // Linguist // Artist <!-- span id="egg"></span --></p>
+            <p>Developer, Linguist, Artist <!-- span id="egg"></span --></p>
         </div>
 <!--
         <div class="random menu" style="width:75px;"><a href="#projects">projects</a></div>
