--- a/_includes/themes/twitter/index.html
+++ b/_includes/themes/twitter/index.html
@@ -70,6 +70,7 @@
         </div>
 
          <footer>
+         <p>Send me a letter: <a href="mailto:richard.littauer@gmail.com">richard.littauer@gmail.com</a></p>
           <p>{{ site.author.name }} &copy; <script type="text/javascript">
             document.write(new Date().getFullYear());
           </script>.
