--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -51,6 +51,7 @@
 
 
               <footer>
+              <p>Send me a letter: <a href="mailto:richard.littauer@gmail.com">richard.littauer@gmail.com</a></p>
           <p>{{ site.author.name }} &copy; <script type="text/javascript">
             document.write(new Date().getFullYear());
           </script>.
