--- a/_includes/themes/twitter/index.html
+++ b/_includes/themes/twitter/index.html
@@ -56,7 +56,7 @@
         </div>
 
         <div id="title">
-            <p>Developer, Linguist, Artist <!-- span id="egg"></span --></p>
+            <p>Richard Littauer</p>
         </div>
 <!--
         <div class="random menu" style="width:75px;"><a href="#projects">projects</a></div>
@@ -72,9 +72,7 @@
         </div>
 
         <div id="title">
-            <p>Developer<br />
-              Linguist <br />
-              Artist</p>
+            <p>Richard Littauer</p>
         </div>
 
      </div>
