--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -26,6 +26,12 @@
     <meta name="twitter:image" content="http://burntfen.com/assets/img/avatar.png">
     <meta name="twitter:url" content="http://burntfen.com">
 
+    <!-- OSMT -->
+    <link rel="profile" href="https://github.com/RichardLitt/open-source-metatags/" />
+    <meta property="os:repo" content="https://github.com/RichardLitt/richardlitt.github.com" />
+    <meta property="os:rcs_type" content="git" />
+    <meta property="os:src" content="git@github.com:RichardLitt/richrdlitt.github.com.git" />
+
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
